# nervePool

./: LICENSE  README.md  boundary.py  complex.py  complex_testing.ipynb  nervepooling.py  originalcomplex.py  plotting.py  pooling_functions.py  pyproject.toml  scratch.py  scratch_boundaries.py  scratch_namedtuple.py  scratch_new_pooling.py  scratch_simplices.py  scratch_torch_geometric.py  test_pooling.py  transforms.py
.jukit/: .jukit_info.json  scratch_new_pooling_outhist.json
original_pooling/: complex.py  plotting.py
test/: test_boundary_from_simplices.py  test_pooling.py  test_simplices_as_numbers.py  test_torch_pooling.py
test/fixtures/: adjacencies.pkl  boundaries.npy  boundaries.pkl  pooled_boundaries.npy  pooled_boundaries.pkl  pooled_simplices.npy  pooled_simplices.pkl  simplices.npy  simplices.pkl
