[tool.poetry]
name = "nervepool"
version = "0.1.0"
description = ""
authors = ["Ernst Röell <ernstroell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
