[project]
name = "nervepool"
version = "0.1.0"
description = ""
authors = [{ name = "Ernst Röell", email = "ernstroell@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "networkx>=3.4.2,<4",
    "matplotlib>=3.10.1,<4",
    "ipykernel>=6.29.5,<7",
    "numpy>=2.2.3",
    "torch>=2.7.0",
    "pytest>=8.3.5",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
